--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load i18n %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +11,7 @@
     <link rel="stylesheet" href="{% static 'fontawesome/css/all.min.css' %}">  <!-- https://fontawesome.com/-->
     <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">       <!-- https://dimsemenov.com/plugins/magnific-popup/ -->
     <link rel="stylesheet" href="{% static 'css/tooplate-vertex.css' %}">
-<!--
+<!---
 
 Tooplate 2124 Vertex
 
@@ -51,6 +53,7 @@ https://www.tooplate.com/view/2124-vertex
             <li class="nav-item">
                 <a href="#about" class="nav-link">
                     About
+
                 </a>
             </li>
             <li class="nav-item">
@@ -83,6 +86,21 @@ https://www.tooplate.com/view/2124-vertex
         <input type="search" name="query" placeholder=" Matn nomi yoki textni kiriting ">
         <input type="submit" value="Search">
     </form>
+                <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
+    <input name="next" type="hidden" value="{{ redirect_to }}">
+    <select name="language">
+        {% get_current_language as LANGUAGE_CODE %}
+        {% get_available_languages as LANGUAGES %}
+        {% get_language_info_list for LANGUAGES as languages %}
+        {% for language in languages %}
+            <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
+                {{ language.name_local }} ({{ language.code }})
+            </option>
+        {% endfor %}
+    </select>
+    <input type="submit" value="Go">
+</form>
+
 
 
                 {% for malumot in matn %}
@@ -99,6 +117,7 @@ https://www.tooplate.com/view/2124-vertex
                     </div>
                 </div>
                 {% endfor %}
+
 
                          {% for malumot in oxshahsh_matnlar %}
                 <div class="tm-media">
